--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
             <div class="container-fluid">
               <div class="logotorosnav">
-              <a class="navbar-brand logotorosnav" href="./index.html"><img src="../toroseventosdeportivostarea1/images/nuevasimagenes/logotoros.jpg" alt="logonav"></a>
+              <a class="navbar-brand logotorosnav" href="./index.html"><img src="../tedproyectocodder/images/nuevasimagenes/logotoros.jpg" alt="logonav"></a>
             </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
               <div class="collapse navbar-collapse navflexpc" id="navbarSupportedContent">
                 <ul class="navbar-nav navbar-center me-auto mb-2 mb-lg-0 ">
                   <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="../toroseventosdeportivostarea1/index.html">Inicio</a>
+                    <a class="nav-link " aria-current="page" href="../tedproyectocodder/index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./html/inscripciones.html">Inscripciones</a>
@@ -53,14 +53,14 @@
     <main class="gradiantes">     
                 <div class="proximotorneo">        
                 <h1 class="h1torneo">PARTICIPA DE NUESTRO PROXIMO TORNEO!</h1>
-                <a  href="./html/inscripciones.html"><img id="fotoproximotorneo"  href="images/nuevasimagenes/xrace.jpg" src="../toroseventosdeportivostarea1/images/nuevasimagenes/xrace.jpg"></a>
+                <a  href="./html/inscripciones.html"><img id="fotoproximotorneo"  href="../tedproyectocodder/images/nuevasimagenes/xrace.jpg" src="../tedproyectocodder/images/nuevasimagenes/xrace.jpg"></a>
                 </div>
                 <div class="container">
                   <div class="row">
                     <div class="col-lg-6">
                       <article class="carrera1 ">
                         <h2 class="h1torneo h2proxcarrera">100x100 AVENTURA</h2>
-                          <a href="./html/inscripciones.html" ><img class="fotoproximacarrera carrera1img" href="../toroseventosdeportivostarea1/images/nuevasimagenes/logo100x100.jpg" src="../toroseventosdeportivostarea1/images/nuevasimagenes/logo100x100.jpg"></a>
+                          <a href="./html/inscripciones.html" ><img class="fotoproximacarrera carrera1img" href="./images/nuevasimagenes/logo100x100.jpg" src="./images/nuevasimagenes/logo100x100.jpg"></a>
                           <p>
                             <a href="./html/inscripciones.html"><button type="button" class="margins">Inscribirse</button></a>
                           </p>    
@@ -69,7 +69,7 @@
                     <div class="col-lg-6">      
                     <article class="carrera2" >
                     <h2 class="h1torneo h2proxcarrera">Duatlon Rustico</h2>
-                      <a href="./html/inscripciones.html" ><img class="fotoproximacarrera carrera2img"  href="../toroseventosdeportivostarea1/images/nuevasimagenes/duatlonrustico.jpg" src="../toroseventosdeportivostarea1/images/nuevasimagenes/duatlonrustico.jpg"></a>
+                      <a href="./html/inscripciones.html" ><img class="fotoproximacarrera carrera2img"  href="./images/nuevasimagenes/duatlonrustico.jpg" src="./images/nuevasimagenes/duatlonrustico.jpg"></a>
                       <p>
                       <a href="./html/inscripciones.html"><button class="" type="button">Inscribirse</button></a>
                       </p>  
