--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <main class="gradiantes">     
                 <div class="proximotorneo">        
                 <h1 class="h1torneo">PARTICIPA DE NUESTRO PROXIMO TORNEO!</h1>
-                <a  href="./html/inscripciones.html"><img id="fotoproximotorneo"  href="../tedproyectocodder/images/nuevasimagenes/xrace.jpg" src="../tedproyectocodder/images/nuevasimagenes/xrace.jpg"></a>
+                <a  href="./html/inscripciones.html"><img id="fotoproximotorneo"  href="./images/nuevasimagenes/xrace.jpg"></a>
                 </div>
                 <div class="container">
                   <div class="row">
@@ -100,7 +100,7 @@
             <p>Todos los derechos reservados al autor</p>
             <p>Página creada solamente para practica</p>
             <p>autor:Sandino Trigo. </p>
-        </p>                                               
+        </p>                                              
 
 
     </footer>
