--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--FontAwesome-->
     <script src="https://kit.fontawesome.com/aed5aef632.js" crossorigin="anonymous"></script>
     <!--GoogleFonts-->
@@ -43,7 +44,6 @@
                   <li class="nav-item">
                     <a class="nav-link" href="./html/nosotros.html">Nosotros</a>
                   </li>
-                  <li class="nav-item">
                     <a class="nav-link" href="./html/contactanos.html">Contactanos!</a>
                   </li>
                 </ul>
@@ -51,25 +51,28 @@
             </div>
           </nav>   
     <main class="gradiantes">     
-                <div class="proximotorneo">        
+                <div class="proximotorneo" data-aos="fade-up">        
                 <h1 class="h1torneo">PARTICIPA DE NUESTRO PROXIMO TORNEO!</h1>
-                <a  href="./html/inscripciones.html"><img id="fotoproximotorneo"  href="" src="./images/nuevasimagenes/xrace.jpg"></a>
-                </div>
-                <div class="container">
-                  <div class="row">
-                    <div class="col-lg-6">
-                      <article class="carrera1 ">
+                <a  href="./html/inscripciones.html"><img id="fotoproximotorneo"  href="./images/nuevasimagenes/xrace.jpg" src="./images/nuevasimagenes/xrace.jpg"></a>
+                <p>Torneo compuesto de varias carreras de aventura que invaden con impresionantes paisajes y aventuras campestres</p>
+              </div>
+                <div class="d-flex flex-column justify-content-between">
+                  <div class="proximascarreras">
+                      <article class="carrera1 carreras12">
                         <h2 class="h1torneo h2proxcarrera">100x100 AVENTURA</h2>
                           <a href="./html/inscripciones.html" ><img class="fotoproximacarrera carrera1img" href="./images/nuevasimagenes/logo100x100.jpg" src="./images/nuevasimagenes/logo100x100.jpg"></a>
+                          <p>La 100x100to aventura es una de las carreras mas emblematicas de nuestra marca, con un recorrido tanto short (50 kilometros) como extreme de (200km. 
+                            Para esta carrera nos movimos al interior del pais para encontrar el recorrido ideal, con este objetivo en mente nos fuimos a Tacuarembo.  </p>
                           <p>
                             <a href="./html/inscripciones.html"><button type="button" class="margins">Inscribirse</button></a>
                           </p>    
                       </article> 
                     </div>
                     <div class="col-lg-6">      
-                    <article class="carrera2" >
+                    <article class="carreras12 carrera2 " >
                     <h2 class="h1torneo h2proxcarrera">Duatlon Rustico</h2>
                       <a href="./html/inscripciones.html" ><img class="fotoproximacarrera carrera2img"  href="./images/nuevasimagenes/duatlonrustico.jpg" src="./images/nuevasimagenes/duatlonrustico.jpg"></a>
+                      <p>El duatlon rustico al igual que la 100x100to aventura fue una de nuestras primeras carreas.El duatlo rustico es especial para quien esta iniciando en este mundo de la aventura, debido a que en esta modalidad el recorrido estara marcado y el corredor no necesitara de un mapa para completarla. Como su nombre lo explica, esta carrera constara de dos modalidades (maraton y mountainbike)</p>
                       <p>
                       <a href="./html/inscripciones.html"><button class="" type="button">Inscribirse</button></a>
                       </p>  
@@ -108,8 +111,11 @@
       <!--Bosstrap scripts-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-  
-    
+   <!--AOS scripts-->
+   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+   <script>
+    AOS.init();
+  </script>
 </body>
 </html>  
 
