--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <!-- icono favicon -->
-    <link rel="shortcut icon" href="./images/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/nuevasimagenes/logotoros.png" type="image/x-icon">
     <title>TorosEventosD.HOME</title>
  <!--Hoja de estilos CSS de manera externa-->
  <link rel="stylesheet" href="./css/estilos.css">
   </head>
 <body> 
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-            <div class="container-fluid">
+    <header >
+        <nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top">
+            <div class="container-fluid navbarbackground">
               <div class="logotorosnav">
-              <a class="navbar-brand logotorosnav" href="./index.html"><img src="../tedproyectocodder/images/nuevasimagenes/logotoros.jpg" alt="logonav"></a>
+              <a class="navbar-brand imglogonav" href="./index.html"><img src="./images/nuevasimagenes/logotoros.png" alt="logonav"></a>
             </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -49,62 +49,55 @@
                 </ul>
               </div>
             </div>
-          </nav>   
+          </nav>
+          </header>   
     <main class="gradiantes">     
-                <div class="proximotorneo" data-aos="fade-up">        
-                <h1 class="h1torneo">PARTICIPA DE NUESTRO PROXIMO TORNEO!</h1>
-                <a  href="./html/inscripciones.html"><img id="fotoproximotorneo"  href="./images/nuevasimagenes/xrace.jpg" src="./images/nuevasimagenes/xrace.jpg"></a>
-                <p>Torneo compuesto de varias carreras de aventura que invaden con impresionantes paisajes y aventuras campestres</p>
-              </div>
-                <div class="d-flex flex-column justify-content-between">
-                  <div class="proximascarreras">
-                      <article class="carrera1 carreras12">
-                        <h2 class="h1torneo h2proxcarrera">100x100 AVENTURA</h2>
-                          <a href="./html/inscripciones.html" ><img class="fotoproximacarrera carrera1img" href="./images/nuevasimagenes/logo100x100.jpg" src="./images/nuevasimagenes/logo100x100.jpg"></a>
-                          <p>La 100x100to aventura es una de las carreras mas emblematicas de nuestra marca, con un recorrido tanto short (50 kilometros) como extreme de (200km. 
-                            Para esta carrera nos movimos al interior del pais para encontrar el recorrido ideal, con este objetivo en mente nos fuimos a Tacuarembo.  </p>
-                          <p>
-                            <a href="./html/inscripciones.html"><button type="button" class="margins">Inscribirse</button></a>
-                          </p>    
-                      </article> 
-                    </div>
-                    <div class="col-lg-6">      
-                    <article class="carreras12 carrera2 " >
-                    <h2 class="h1torneo h2proxcarrera">Duatlon Rustico</h2>
-                      <a href="./html/inscripciones.html" ><img class="fotoproximacarrera carrera2img"  href="./images/nuevasimagenes/duatlonrustico.jpg" src="./images/nuevasimagenes/duatlonrustico.jpg"></a>
-                      <p>El duatlon rustico al igual que la 100x100to aventura fue una de nuestras primeras carreas.El duatlo rustico es especial para quien esta iniciando en este mundo de la aventura, debido a que en esta modalidad el recorrido estara marcado y el corredor no necesitara de un mapa para completarla. Como su nombre lo explica, esta carrera constara de dos modalidades (maraton y mountainbike)</p>
-                      <p>
-                      <a href="./html/inscripciones.html"><button class="" type="button">Inscribirse</button></a>
-                      </p>  
-                      </article>
-                    </div>
-                  </div>
-              </div>      
-            <section class="sponsors">   
-                        <article>
-                                <h2 class="h1torneo">Sponsor</h2>
-                                <a  href="https://www.salomonstore.com.ar/"><img href="./images/sponsor.png" src="./images/sponsor.png"></a>
-                        </article>           
+    <h1 class="container h1index">INSCRIBITE A NUESTRO PROXIMO TORNEO</h1>
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active"> <a href="./html/inscripciones.html">
+          <img src="./images/nuevasimagenes/100x100to neon.png" class="d-block w-100" alt="100x100toaventura"></a>
+          <div class="carousel-caption d-none d-md-block">
+            <h5> Se viene la 100x100to AVENTURA!</h5>
+            <p>La 100x100to aventura es una de las carreras mas emblematicas de nuestra marca, con un recorrido tanto short (50 kilometros) como extreme de (200km. 
+              Para esta carrera nos movimos al interior del pais para encontrar el recorrido ideal, con este objetivo en mente nos fuimos a Tacuarembo.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <a href="./html/inscripciones.html"></a><img src="./images/nuevasimagenes/duatlonrustico.jpg" class="d-block w-100" alt="duatlonrustico"></a>
+          <div class="carousel-caption d-none d-md-block backgroundcarreras">
+            <h5>Incursiona en la aventura participando en la short-distance</h5>
+            <p>La XRace es un torneoorneo compuesto de varias carreras de aventura que invaden con impresionantes paisajes y aventuras inolvidables</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
-                        <article>
-                                <h2 class="h1torneo sponsors">Sponsor</h2>
-                                <a  href="https://www.salomonstore.com.ar/"><img href="./images/sponsor.png" src="./images/sponsor.png"  ></a>
-                        </article> 
-            </section>
-    </main>
+    <div class="container p-3 h2index"><h2>Participan de nuestros eventos las siguientes marcas:</h2>
+      <img class="sponsors" src="./images/nuevasimagenes/sponsors.jpg" alt="sponsors">
+    </div>
 
     <footer class="footermio">
 
-        <a href="./index.html"> <img class="logofooter" src="images/logo.jpg"> </a>
+        <a href="./index.html"> <img class="logofooter" src="./images/nuevasimagenes/logotoros.png"> </a>    
     
-        <a target="_blank"href="https://www.youtube.com/watch?v=6eCpg5fJpDY"><img class="logofooter"src="./images/logoyoutubee.png" > </a>
         
-        <p>
             <p>Todos los derechos reservados al autor</p>
             <p>Página creada solamente para practica</p>
             <p>autor:Sandino Trigo. </p>
-        </p>                                              
-
 
     </footer>
 
