--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -5,18 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <!--BOOTSRAP-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-
-  <link rel="stylesheet" href="/css/estilos.css">
+<!--BOOTSRAP-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"> 
+ <link rel="stylesheet" href="/css/estilos.css">
 </head>
 <body>
   <header >
     <nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top">
         <div class="container-fluid navbarbackground">
           <div class="logotorosnav">
-          <a class="navbar-brand imglogonav" href="./index.html"><img src="/images/nuevasimagenes/logotoros.png" alt="logoheader"></a>
+          <a class="navbar-brand imglogonav" href="./index.html"><img src="/images/nuevasimagenes/logotoros.png" alt="logonav"></a>
         </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,7 +23,7 @@
           <div class="collapse navbar-collapse navflexpc" id="navbarSupportedContent">
             <ul class="navbar-nav navbar-center me-auto mb-2 mb-lg-0 ">
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="/index.html">Inicio</a>
+                <a class="nav-link " aria-current="page" href="../index.html">Inicio</href=> </li>Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./html/inscripciones.html">Inscripciones</a>
@@ -40,10 +39,31 @@
             </ul>
           </div>
         </div>
-      </nav>
-      </header>   
+      </nav>   
+ </header>
+ <main class="gradiantes"> 
+  <div class="container">
+  <h1 class="h1index">Nuestra vision</h1>
+  <p class="textogeneral">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolorem veritatis iste ea, quisquam dignissimos. Quasi sequi quibusdam ducimus quisquam sed necessitatibus temporibus, consectetur at vero tempora, placeat ea eum consequatur ratione sit tempore facere sapiente facilis corrupti quos fugiat quaerat odit fugit consequuntur! Consequuntur ad neque et voluptatum quo placeat quam qui? Vel dolorum iste magni aliquid expedita provident voluptatem, temporibus adipisci libero, hic voluptatum quaerat enim at veniam. Cum amet eaque maxime. Ab vitae at fuga odit minima illo, non magni animi beatae temporibus, autem molestiae vel nesciunt tenetur? Dolorem nam minus quod ad facere dignissimos deserunt laudantium.
+  </p>
+  <h1 class="h1index">Nuestra Mision</h1>
+  <p class="textogeneral">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolorem veritatis iste ea, quisquam dignissimos. Quasi sequi quibusdam ducimus quisquam sed necessitatibus temporibus, consectetur at vero tempora, placeat ea eum consequatur ratione sit tempore facere sapiente facilis corrupti quos fugiat quaerat odit fugit consequuntur! Consequuntur ad neque et voluptatum quo placeat quam qui? Vel dolorum iste magni aliquid expedita provident voluptatem, temporibus adipisci libero, hic voluptatum quaerat enim at veniam. Cum amet eaque maxime. Ab vitae at fuga odit minima illo, non magni animi beatae temporibus, autem molestiae vel nesciunt tenetur? Dolorem nam minus quod ad facere dignissimos deserunt laudantium.
+  </p>
+</div>
 
-  
+ </main>
+
+  <footer class="footermio">
+
+    <a href="./index.html"> <img class="logofooter" src="/images/nuevasimagenes/logotoros.png"> </a>    
+
+    
+        <p>Todos los derechos reservados al autor</p>
+        <p>Página creada solamente para practica</p>
+        <p>autor:Sandino Trigo. </p>
+
+</footer>
+
   <!--Bosstrap scripts-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
