--- a/index.html
+++ b/index.html
@@ -21,35 +21,35 @@
  <link rel="stylesheet" href="./css/estilos.css">
   </head>
 <body> 
-    <header >
-        <nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top">
-            <div class="container-fluid navbarbackground">
-              <div class="logotorosnav">
-              <a class="navbar-brand imglogonav" href="./index.html"><img src="./images/nuevasimagenes/logotoros.png" alt="logonav"></a>
-            </div>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse navflexpc" id="navbarSupportedContent">
-                <ul class="navbar-nav navbar-center me-auto mb-2 mb-lg-0 ">
-                  <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="../tedproyectocodder/index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./html/inscripciones.html">Inscripciones</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./html/merchandising.html">Merchandising</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./html/nosotros.html">Nosotros</a>
-                  </li>
-                    <a class="nav-link" href="./html/contactanos.html">Contactanos!</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+  <header >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top">
+        <div class="container-fluid navbarbackground">
+          <div class="logotorosnav">
+          <a class="navbar-brand imglogonav" href="./index.html"><img src="./images/nuevasimagenes/logotoros.png" alt="logonav"></a>
+        </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse navflexpc" id="navbarSupportedContent">
+            <ul class="navbar-nav navbar-center me-auto mb-2 mb-lg-0 ">
+              <li class="nav-item">
+                <a class="nav-link " aria-current="page" href="./tedproyectocodder/index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./html/inscripciones.html">Inscripciones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./html/merchandising.html">Merchandising</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./html/nosotros.html">Nosotros</a>
+              </li>
+                <a class="nav-link" href="./html/contactanos.html">Contactanos!</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
           </header>   
     <main class="gradiantes">     
     <h1 class="container h1index">INSCRIBITE A NUESTRO PROXIMO TORNEO</h1>
