--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contacta con nosotros y comentanos tus dudas o que te parecio nuestra carrera!">
+    <meta name="keywords" content="Carreras de aventura,maraton, trail, duatlon, running, mountainbike, Uruguay, cien por ciento aventura, X race, Duatlon rustico, contacto toros eventos deportivos, contacto TED,">
     <title>TorosEventos.ContactUs</title>
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
