--- a/html/inscripciones.html
+++ b/html/inscripciones.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Carreras de aventura,maraton, trail, duatlon, running, mountainbike, Uruguay, inscribirse a carrera de aventuras,cien por ciento aventura, X race, Duatlon rustico ">
     <title>TED-Inscripciones</title>
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
