--- a/html/merchandising.html
+++ b/html/merchandising.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cada una de las inscripciones a nuestras carreras cuentan con los siguientes regalos e indumentaria">
+    <meta name="keywords" content="Carreras de aventura,maraton, trail, duatlon, running, mountainbike, Uruguay, kit de carreras, merchandising TED, merchandising Toros Eventos Deportivos, indumentaria TED, Ropa TED ">
     <title>TED-Merch</title>
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
