--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descubri el mundo de las carreras de aventura junto a Toros Eventos Deportivos">
+    <meta name="keywords" content="Carreras de aventura,maraton, trail, duatlon, running, mountainbike, Uruguay, cien por ciento aventura, X race, Duatlon rustico, auca, suca sports">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--FontAwesome-->
     <script src="https://kit.fontawesome.com/aed5aef632.js" crossorigin="anonymous"></script>
@@ -18,7 +20,7 @@
     <link rel="shortcut icon" href="./images/nuevasimagenes/logotoros.png" type="image/x-icon">
     <title>TorosEventosD.HOME</title>
  <!--Hoja de estilos CSS de manera externa-->
- <link rel="stylesheet" href="./css/estilos.css">
+ <link rel="stylesheet" href="./css/style.css">
   </head>
 <body> 
   <header >
@@ -63,16 +65,23 @@
         <div class="carousel-item active"> <a href="./html/inscripciones.html">
           <img src="./images/nuevasimagenes/100x100to neon.png" class="d-block w-100" alt="100x100toaventura"></a>
           <div class="carousel-caption d-none d-md-block">
-            <h5> Se viene la 100x100to AVENTURA!</h5>
+            <h2> Se viene la 100x100to AVENTURA!</h2>
             <p>La 100x100to aventura es una de las carreras mas emblematicas de nuestra marca, con un recorrido tanto short (50 kilometros) como extreme de (200km. 
               Para esta carrera nos movimos al interior del pais para encontrar el recorrido ideal, con este objetivo en mente nos fuimos a Tacuarembo.</p>
           </div>
         </div>
         <div class="carousel-item">
+          <a href="./html/inscripciones.html"></a><img src="./images/nuevasimagenes/xrace.jpg" class="d-block w-100" alt="duatlonrustico"></a>
+          <div class="carousel-caption d-none d-md-block backgroundcarreras">
+            <h2>Incursiona en la aventura participando en la short-distance</h2>
+            <p class="parrafosec">La XRace es un tornerneo compuesto de varias carreras de aventura que invaden con impresionantes paisajes y aventuras inolvidables</p>
+          </div>
+        </div>
+        <div class="carousel-item">
           <a href="./html/inscripciones.html"></a><img src="./images/nuevasimagenes/duatlonrustico.jpg" class="d-block w-100" alt="duatlonrustico"></a>
           <div class="carousel-caption d-none d-md-block backgroundcarreras">
-            <h5>Incursiona en la aventura participando en la short-distance</h5>
-            <p>La XRace es un torneoorneo compuesto de varias carreras de aventura que invaden con impresionantes paisajes y aventuras inolvidables</p>
+            <h2>Si no te gusta la orientacion, te ofrecemos el duatlon rustico</h2>
+            <p class="parrafosec">Esta carrera con difecrencia de las otras, propone un recorrido marcado mucho mas facil y corto. Dividida por un tramo en mountabike y el resto de trail</p>
           </div>
         </div>
       </div>
@@ -86,7 +95,7 @@
       </button>
     </div>
 
-    <div class="container p-3 h2index"><h2>Participan de nuestros eventos las siguientes marcas:</h2>
+    <div class="container p-3 h2index"><h3>Participan de nuestros eventos las siguientes marcas:</h3>
       <img class="sponsors" src="./images/nuevasimagenes/sponsors.jpg" alt="sponsors">
     </div>
 
