--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="description" content="Somos una empresa que organiza carreras de aventura en todo Uruguay, velando por la seguridad de nuestros corredores y el disfrute de los paisajes nacionales">
+  <meta name="keywords" content="Carreras de aventura,maraton, trail, duatlon, running, mountainbike, Uruguay, Toros Eventos Deportivos, TED, Quienes somos, que es TED">
+  <title>Quienes somos</title>
 <!--BOOTSRAP-->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"> 
