--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
   </head>
 <body> 
   <header >
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark  sticky-top">
         <div class="container-fluid navbarbackground">
           <div class="logotorosnav">
-          <a class="navbar-brand imglogonav" href="./index.html"><img src="./images/nuevasimagenes/logotoros.png" alt="logonav"></a>
+          <a class="navbar-brand " href="./index.html"><img class="imglogonav" src="./images/nuevasimagenes/logotoros.jpg" alt="logonav"></a>
         </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse navflexpc" id="navbarSupportedContent">
-            <ul class="navbar-nav navbar-center me-auto mb-2 mb-lg-0 ">
+            <ul class="navbar-nav navbar-center  me-auto mb-2 mb-lg-0 clasemia ">
               <li class="nav-item">
                 <a class="nav-link " aria-current="page" href="./tedproyectocodder/index.html">Inicio</a>
               </li>
@@ -55,7 +55,7 @@
           </header>   
     <main class="gradiantes">     
     <h1 class="container h1index">INSCRIBITE A NUESTRO PROXIMO TORNEO</h1>
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+    <div id="carouselExampleCaptions" class="carousel slide slider data-bs-ride="false">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -63,19 +63,10 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active"> <a href="./html/inscripciones.html">
-          <img src="./images/nuevasimagenes/100x100to neon.png" class="d-block w-100" alt="100x100toaventura"></a>
-          <div class="carousel-caption d-none d-md-block">
-            <h2> Se viene la 100x100to AVENTURA!</h2>
-            <p>La 100x100to aventura es una de las carreras mas emblematicas de nuestra marca, con un recorrido tanto short (50 kilometros) como extreme de (200km. 
-              Para esta carrera nos movimos al interior del pais para encontrar el recorrido ideal, con este objetivo en mente nos fuimos a Tacuarembo.</p>
-          </div>
+          <img  src="./images/nuevasimagenes/100x100to neon.jpg" class="d-block w-100" alt="100x100toaventura"></a>
         </div>
         <div class="carousel-item">
           <a href="./html/inscripciones.html"></a><img src="./images/nuevasimagenes/xrace.jpg" class="d-block w-100" alt="duatlonrustico"></a>
-          <div class="carousel-caption d-none d-md-block backgroundcarreras">
-            <h2>Incursiona en la aventura participando en la short-distance</h2>
-            <p class="parrafosec">La XRace es un tornerneo compuesto de varias carreras de aventura que invaden con impresionantes paisajes y aventuras inolvidables</p>
-          </div>
         </div>
         <div class="carousel-item">
           <a href="./html/inscripciones.html"></a><img src="./images/nuevasimagenes/duatlonrustico.jpg" class="d-block w-100" alt="duatlonrustico"></a>
