--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -6,50 +6,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Somos una empresa que organiza carreras de aventura en todo Uruguay, velando por la seguridad de nuestros corredores y el disfrute de los paisajes nacionales">
   <meta name="keywords" content="Carreras de aventura,maraton, trail, duatlon, running, mountainbike, Uruguay, Toros Eventos Deportivos, TED, Quienes somos, que es TED">
-  <title>Quienes somos</title>
-<!--BOOTSRAP-->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"> 
- <link rel="stylesheet" href="/css/estilos.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@600&family=Permanent+Marker&display=swap" rel="stylesheet"> 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap" rel="stylesheet"> 
+    <!--BOOTSRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <!-- icono favicon -->
+    <link rel="shortcut icon" href="../images/nuevasimagenes/logotoros.jpg" type="image/x-icon">
+    <title>TorosEventosD.Nosotros</title>
+ <!--Hoja de estilos CSS de manera externa-->
+ <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
   <header >
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark  sticky-top">
         <div class="container-fluid navbarbackground">
           <div class="logotorosnav">
-          <a class="navbar-brand imglogonav" href="./index.html"><img src="/images/nuevasimagenes/logotoros.png" alt="logonav"></a>
+          <a class="navbar-brand " href="./index.html"><img class="imglogonav" src="../images/nuevasimagenes/logotoros.jpg" alt="logonav"></a>
         </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse navflexpc" id="navbarSupportedContent">
-            <ul class="navbar-nav navbar-center me-auto mb-2 mb-lg-0 ">
+            <ul class="navbar-nav navbar-center  me-auto mb-2 mb-lg-0 clasemia ">
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="../index.html">Inicio</href=> </li>Inicio</a>
+                <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./html/inscripciones.html">Inscripciones</a>
+                <a class="nav-link" href="./inscripciones.html">Inscripciones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./html/merchandising.html">Merchandising</a>
+                <a class="nav-link" href="./merchandising.html">Merchandising</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./html/nosotros.html">Nosotros</a>
+                <a class="nav-link" href="./nosotros.html">Nosotros</a>
               </li>
-                <a class="nav-link" href="./html/contactanos.html">Contactanos!</a>
+                <a class="nav-link" href="./contactanos.html">Contactanos!</a>
               </li>
             </ul>
           </div>
         </div>
-      </nav>   
- </header>
+      </nav>
+          </header>  
  <main class="gradiantes"> 
-  <div class="container">
-  <h1 class="h1index">Nuestra vision</h1>
-  <p class="textogeneral">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolorem veritatis iste ea, quisquam dignissimos. Quasi sequi quibusdam ducimus quisquam sed necessitatibus temporibus, consectetur at vero tempora, placeat ea eum consequatur ratione sit tempore facere sapiente facilis corrupti quos fugiat quaerat odit fugit consequuntur! Consequuntur ad neque et voluptatum quo placeat quam qui? Vel dolorum iste magni aliquid expedita provident voluptatem, temporibus adipisci libero, hic voluptatum quaerat enim at veniam. Cum amet eaque maxime. Ab vitae at fuga odit minima illo, non magni animi beatae temporibus, autem molestiae vel nesciunt tenetur? Dolorem nam minus quod ad facere dignissimos deserunt laudantium.
+  <div class="container divnosotros">
+  <h1 class="h1nosotros">¿Quienes somos?</h1>
+  <p class="textonosotros">Asi como la mayoria de nuestros lectores... Somos amantes de la aventura, de la naturaleza.De los retos a los que nos enfrentamos tanto cuando corremos una carrera, asi como cuando tenemos que organizarla para darle la mejor experiencia a nuestros corredores.
   </p>
-  <h1 class="h1index">Nuestra Mision</h1>
-  <p class="textogeneral">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolorem veritatis iste ea, quisquam dignissimos. Quasi sequi quibusdam ducimus quisquam sed necessitatibus temporibus, consectetur at vero tempora, placeat ea eum consequatur ratione sit tempore facere sapiente facilis corrupti quos fugiat quaerat odit fugit consequuntur! Consequuntur ad neque et voluptatum quo placeat quam qui? Vel dolorum iste magni aliquid expedita provident voluptatem, temporibus adipisci libero, hic voluptatum quaerat enim at veniam. Cum amet eaque maxime. Ab vitae at fuga odit minima illo, non magni animi beatae temporibus, autem molestiae vel nesciunt tenetur? Dolorem nam minus quod ad facere dignissimos deserunt laudantium.
+  <h1 class="h1nosotros">Nuestra Mision</h1>
+  <p class="textonosotros">Hay 3 pilares que conforman la esencia de TED:1.Nuestro amor por la naturaleza, creando un camino en el que correr ayude y mejore las reservas naturales   nacionales.Donando 1U$D por cada inscripcion a organizaciones beneficas. <br>
+  2. Nuestra experiencia como corredores nos dan perspectivas en las que podemos entender lo que el corredor busca a la hora de enfrentarse a un reto como lo son, con sus respectivas dificultades, nuestras carreras. <br>
+  3.Seguridad: como organizacion velamos y nos responsabilizamos en tomar todas las medidas de seguridad necesarias para nuestros corredores. Abarcando desde EPPS necesarios,la buena señalizacion del camino,etc.
+  
   </p>
 </div>
 
